trunk/Archive2/d8/ac0e63f89d408e/output
main.cpp:22:18: error: no matching function for call to 'f_of_ten'
    std::cout << f_of_ten(std::sqrt<double>) << std::endl; // compile ERROR here!!!
                 ^~~~~~~~
main.cpp:9:6: note: candidate function not viable: no overload of 'sqrt' matching 'std::function<cplx (const cplx &)>' for 1st argument
cplx f_of_ten(std::function<cplx(const cplx &)> x) // the problematic one
     ^
1 error generated.
